--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
   },
 	"angularCompilerOptions": {
 		"enableI18nLegacyMessageIdFormat": false,
-		"strictInjectionParameters": true,
+		"strictInjectionParameters": false,
 		"strictInputAccessModifiers": true,
 		"strictTemplates": true,
 	}
