--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.4",
     "@types/google-maps": "^3.2.3",
+    "angular-particle": "^1.0.4",
     "angular-svg-icon": "^13.0.0",
     "apexcharts": "^3.35.3",
+    "flowbite": "^1.6.5",
     "ng-apexcharts": "^1.7.1",
     "ngx-spinner": "^8.1.0",
     "ngx-toastr": "^14.3.0",
