--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "angular-svg-icon": "^13.0.0",
     "apexcharts": "^3.35.3",
     "flowbite": "^1.6.5",
+    "jw-angular-pagination": "^1.2.0",
     "ng-apexcharts": "^1.7.1",
+    "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^8.1.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.4.0",
