updated changed demo urls

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dark mode",
     "open source"
   ],
-  "author": "Luciano Oliveira <me@lanno.dev>",
+  "author": "Isaac Mrongo <Rabin_Mrongo>",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
